[package]
name = "ese_parser"
version = "0.1.0"
authors = ["(OUT) Vitaly Reshetyuk <vitaly.askz.maknii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
libc = "0.2"
simple-error = "*"
log = "*"
env_logger = "*"
prettytable-rs = "*"
hexdump = "*"
itertools = "*"
regex = "*"
strum = {version = "*", features = ["derive"]}
strum_macros = "*"
chrono = "*"
winapi = { version = "0.3", features = ["timezoneapi"] }
bitflags = "*"
comfy-table = { path = "comfy-table" }
bitfield = "*"
