[package]
name = "ese_parser_lib"
version = "0.1.0"
authors = ["Aon"]
edition = "2018"

[lib]
name = "ese_parser_lib"
test = true
doctest = false

[target.'cfg(windows)'.build-dependencies]
bindgen = "0.56.0"
cc = { version = "1.0", features = ["parallel"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["timezoneapi"] }

[dependencies]
libc = "0.2"
simple-error = "*"
pretty-hex = "*"
bitflags = "*"
bitfield = "*"
hexdump = "*"
log = "*"
chrono = "*"
cache_2q = "*"
widestring = "*"
encoding = "*"
strum = {version = "*", features = ["derive"]}
strum_macros = "*"
md5 = "*"
filepath = "*"
nom = "7"
