[package]
name = "ese_parser_lib"
version = "0.1.0"
authors = ["Aon"]
edition = "2018"
resolver = "2"

[lib]
name = "ese_parser_lib"
test = true
doctest = false

[target.'cfg(windows)'.build-dependencies]
bindgen = "0.56.0"
cc = { version = ">= 1.0", features = ["parallel"] }

[dependencies]
libc = ">= 0.2"
simple-error = "*"
pretty-hex = "*"
bitflags = ">= 2.3.3"
bitfield = "*"
hexdump = "*"
log = "*"
chrono = ">=0.4.24"
cache_2q = "*"
widestring = "*"
encoding = "*"
strum = {version = "*", features = ["derive"]}
strum_macros = "*"
md5 = "*"
filepath = "*"
nom = ">= 7"
nom-derive = "*"
byteorder = ">= 1.4.3"
paste = ">= 1.0"

[dev-dependencies]
simple-error = "*"
widestring = "*"

[features]
nt_comparison = []

[[example]]
name = "ese_parser"
