[package]
name = "ese_parser_lib"
version = "0.1.0"
authors = ["Aon"]
edition = "2021"
resolver = "2"

[lib]
name = "ese_parser_lib"
test = true
doctest = false

[target.'cfg(windows)'.build-dependencies]
bindgen = "0.66.1"
cc = { version = ">= 1.0", features = ["parallel"] }

[dependencies]
libc = ">= 0.2"
simple-error = ">= 0.3"
pretty-hex = ">= 0.3"
bitflags = ">= 2.3.3"
bitfield = ">= 0.14"
hexdump = ">= 0.1"
log = ">= 0.4"
chrono = ">=0.4.24"
cache_2q = ">= 0.10"
widestring = ">= 1"
encoding = ">= 0.2"
strum = {version = ">= 0.24", features = ["derive"]}
strum_macros = ">= 0.24"
md5 = ">= 0.7"
filepath = ">= 0.1"
nom = ">= 7"
nom-derive = ">= 0.10.1"
byteorder = ">= 1.4.3"
paste = ">= 1.0"
bitvec = ">= 1"
once_cell = ">= 1"

[features]
nt_comparison = []

[[example]]
name = "ese_parser"
