[package]
name = "ese_parser"
version = "0.1.0"
edition = "2018"
authors = ["Oleh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ese_parser"
crate-type = ["cdylib"]

[dependencies]
chrono = "*"
ese_parser_lib = { path = "../lib" }
simple-error = "*"
widestring = "*"
pyo3 = { version = "=0.14.5", features = ["extension-module"] }
pyo3-file = "=0.4.0"
pyo3-log = "=0.4.1"
log = "*"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["oleauto"] }
